# Free-for-Read

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
.github/workflows/: build.yml
docs/plan/: route-b-roadmap-cn.md  route-b-roadmap.md
docs/superpowers/plans/: 2026-05-17-free-for-read-parser-api.md  2026-05-20-ebook-library.md  2026-05-21-phase3-embeddable-backend.md  2026-05-21-phase4-tauri-reading-app.md  2026-05-21-phase5-ai-reading-features.md  2026-05-21-phase6-polish-distribution.md
docs/superpowers/specs/: 2026-05-17-free-for-read-parser-api-design.md  2026-05-20-ebook-library-design.md  2026-05-21-phase3-embeddable-backend-design.md  2026-05-21-phase4-tauri-reading-app-design.md  2026-05-21-phase5-ai-reading-features-design.md  2026-05-21-phase6-polish-distribution-design.md
free_for_read/: cli.py
free_for_read/ai/: chunking.py  embeddings.py  indexer.py  llm.py  rag.py  service.py
free_for_read/api/: ai_routes.py  ai_schemas.py  app.py  library_routes.py  library_schemas.py  parse_file_routes.py  routes.py  schemas.py
free_for_read/core/: errors.py  models.py  service.py
free_for_read/detectors/: content_type.py
free_for_read/fetchers/: url_fetcher.py
free_for_read/metadata/: builder.py
free_for_read/parsers/: base.py  ebooks.py  image.py  office.py  pdf.py  registry.py  web.py
free_for_read/renderers/: markdown.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AiPanel.tsx  BookCard.tsx  BottomNav.tsx  ChapterList.tsx  DropZone.tsx  FoliateReader.tsx  MarkdownPreview.tsx  ReaderToolbar.tsx  ReadingSettings.tsx  SearchBar.tsx
frontend/src/lib/: settings.ts  (+2 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  sidecar.rs
tests/ai/: test_chunking.py  test_embeddings.py  test_indexer.py  test_llm.py  test_rag.py
tests/api/: test_ai_integration.py  test_ai_routes.py  test_app.py  test_library_integration.py  test_library_routes.py  test_parse_file_integration.py  test_parse_file_routes.py  test_parse_integration.py  test_parse_route.py  test_shutdown.py
tests/cli/: test_cli.py
tests/core/: test_errors.py  test_models.py  test_service.py
tests/detectors/: test_content_type.py
tests/fetchers/: test_url_fetcher.py
tests/metadata/: test_builder.py
tests/parsers/: test_ebooks_epub.py  test_ebooks_fb2.py  test_image.py  test_office.py  test_pdf.py  test_registry.py  test_web.py
tests/renderers/: test_markdown.py
(+22 files in other folders)
