[project]
name = "free-for-read"
version = "0.1.0"
description = "A document and content parsing engine for clean Markdown, LLM, and RAG workflows."
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.30",
  "beautifulsoup4>=4.12.0",
  "chromadb>=0.5,<0.7",
  "onnxruntime>=1.17,<1.24",
  "defusedxml>=0.7.1",
  "fastapi>=0.111.0",
  "httpcore>=1.0.0,<1.1.0",
  "httpx>=0.27.0,<0.29.0",
  "openai>=1.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "pypdf>=4.2.0",
  "python-docx>=1.1.0",
  "python-multipart>=0.0.9",
  "python-pptx>=0.6.23",
  "rank-bm25>=0.2",
  "sentence-transformers>=3.0",
  "trafilatura>=1.9.0",
  "uvicorn[standard]>=0.30.0"
]

[project.scripts]
free-for-read = "free_for_read.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["free_for_read*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-httpx>=0.30.0",
  "ruff>=0.4.0",
  "pyinstaller>=6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
